Various security improvements